--- a/CurrencyConverter/MainPage.xaml
+++ b/CurrencyConverter/MainPage.xaml
@@ -62,11 +62,10 @@
                     ItemsSource="{Binding ListOfCurrency}"
                     SelectedIndex="{Binding SelectedCurrencyOut}"/>
 
-            <Label
-                SemanticProperties.HeadingLevel="Level2"
-                FontSize="18"
-                HorizontalTextAlignment="Center"
-                HorizontalOptions="Center">
+            <Label SemanticProperties.HeadingLevel="Level2"
+                   FontSize="18"
+                   HorizontalTextAlignment="Center"
+                   HorizontalOptions="Center">
                 <Label.Text>
                     <MultiBinding StringFormat="1 {0} равен {1:F2} {2}" >
                         <Binding Path="nameOfCurrencyIn"/>
